k8s-yamls-master/k8s-yamls-master/old-archive/gravitee-dev/apim/4-svc-api-qa.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-qa
spec:
  ports:
  - name: gateway
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: giob
    app.kubernetes.io/name: apim3
  type: ClusterIP
