k8s-yamls-master/k8s-yamls-master/old-archive/gravitee-dev/apim/5-ing-gateway.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gio-apim3-gateway
  annotations:
      # kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/proxy-body-size: 100m
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
      nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "300"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: api-dev-ms-westus2.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-dev.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-strict-dev.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-strict-dev-ms-westus2.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-intra-dev.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-intra-dev-ms-westus2.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-public-dev.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-public-dev-ms-westus2.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-qa.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-qa-ms-westus2.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-strict-qa.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-strict-qa-ms-westus2.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-intra-qa.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-intra-qa-ms-westus2.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-public-qa.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-public-qa-ms-westus2.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: posgslbtest.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
    - host: api-okta-poc.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gio-apim3-gateway
                port:
                  number: 82
  tls:
    - hosts:
      - api-dev.medimpact.com
      - api-dev-ms-westus2.medimpact.com
      - api-strict-dev.medimpact.com
      - api-strict-dev-ms-westus2.medimpact.com
      - api-intra-dev.medimpact.com
      - api-intra-dev-ms-westus2.medimpact.com
      - api-public-dev.medimpact.com
      - api-public-dev-ms-westus2.medimpact.com
      - api-qa.medimpact.com
      - api-qa-ms-westus2.medimpact.com
      - api-strict-qa.medimpact.com
      - api-strict-qa-ms-westus2.medimpact.com
      - api-intra-qa.medimpact.com
      - api-intra-qa-ms-westus2.medimpact.com
      - api-public-qa.medimpact.com
      - api-public-qa-ms-westus2.medimpact.com
      - posgslbtest.medimpact.com
      - api-okta-poc.medimpact.com
